<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/app_home"
            android:checked="true"
            android:icon="@mipmap/ic_home_white_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/events_menu"
            android:icon="@mipmap/ic_event_white_24dp"
            android:title="@string/event"/>

        <item
            android:id="@+id/registration"
            android:icon="@mipmap/ic_format_list_bulleted_white_24dp"
            android:title="@string/registration" />

        <item android:id="@+id/contact_us_item"
            android:icon="@mipmap/ic_contacts_white_24dp"
            android:title="@string/contact_us"/>
    </group>

    <group android:id="@+id/app_options">
        <item
            android:id="@+id/nav_share"
            android:icon="@mipmap/ic_share_white_24dp"
            android:title="@string/share_my_app" />
        <item
            android:id="@+id/map"
            android:icon="@mipmap/ic_place_white_24dp"
            android:title="@string/map" />
    </group>

    <group android:id="@+id/developers_group"
        android:checkableBehavior="single"
        >
        <item android:id="@+id/developers"
            android:icon="@mipmap/ic_people_outline_white_24dp"
            android:title="@string/developers"/>
    </group>
</menu>
