<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hemal.techfest16.MainActivity"
    >


    <TextView
        android:id="@+id/tv_content_main_vgec_presents"
        android:text="@string/vgec_presents"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:textColor="#1976D2"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/tv_content_main_gtu_central_techfest"
        android:text="@string/gtu_central_techfest"
        android:textSize="25sp"
        android:textColor="#ff4545"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tv_content_main_vgec_presents"
        android:layout_centerHorizontal="true" />


    <ImageView
        android:id="@+id/iv_content_main_vgec"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/tf_logo"
        android:contentDescription="@string/vgec_college"
        android:layout_below="@+id/tv_content_main_gtu_central_techfest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <ImageView
        android:id="@+id/iv_content_main_sponsors"
        android:layout_width="match_parent"
        android:src="@mipmap/tf_logo"
        android:contentDescription="@string/sponsors"
        android:layout_height="200dp"
        android:layout_below="@+id/iv_content_main_vgec"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp" />
</RelativeLayout>
